@@ -12,7 +12,7 @@ $jar->add(Mojo::Cookie::Response->new(domain => 'example.com'));
 $jar->add(Mojo::Cookie::Response->new(name   => 'foo'));
 $jar->add(Mojo::Cookie::Response->new(name => 'foo', domain => 'example.com'));
 $jar->add(Mojo::Cookie::Response->new(domain => 'example.com', path => '/'));
-is_deeply [$jar->all], [], 'no cookies';
+is_deeply $jar->all, [], 'no cookies';
 
 # Session cookie
 $jar->add(
@@ -29,39 +29,39 @@ $jar->add(
     value  => 'works'
   )
 );
-my @cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
-is $cookies[0]->name,  'foo',   'right name';
-is $cookies[0]->value, 'bar',   'right value';
-is $cookies[1]->name,  'just',  'right name';
-is $cookies[1]->value, 'works', 'right value';
-is $cookies[2], undef, 'no third cookie';
-@cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
-is $cookies[0]->name,  'foo',   'right name';
-is $cookies[0]->value, 'bar',   'right value';
-is $cookies[1]->name,  'just',  'right name';
-is $cookies[1]->value, 'works', 'right value';
-is $cookies[2], undef, 'no third cookie';
-@cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
-is $cookies[0]->name,  'foo',   'right name';
-is $cookies[0]->value, 'bar',   'right value';
-is $cookies[1]->name,  'just',  'right name';
-is $cookies[1]->value, 'works', 'right value';
-is $cookies[2], undef, 'no third cookie';
-@cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
-is $cookies[0]->name,  'foo',   'right name';
-is $cookies[0]->value, 'bar',   'right value';
-is $cookies[1]->name,  'just',  'right name';
-is $cookies[1]->value, 'works', 'right value';
-is $cookies[2], undef, 'no third cookie';
-@cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
-is $cookies[0]->name,  'foo',   'right name';
-is $cookies[0]->value, 'bar',   'right value';
-is $cookies[1]->name,  'just',  'right name';
-is $cookies[1]->value, 'works', 'right value';
-is $cookies[2], undef, 'no third cookie';
+my $cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
+is $cookies->[0]->name,  'foo',   'right name';
+is $cookies->[0]->value, 'bar',   'right value';
+is $cookies->[1]->name,  'just',  'right name';
+is $cookies->[1]->value, 'works', 'right value';
+is $cookies->[2], undef, 'no third cookie';
+$cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
+is $cookies->[0]->name,  'foo',   'right name';
+is $cookies->[0]->value, 'bar',   'right value';
+is $cookies->[1]->name,  'just',  'right name';
+is $cookies->[1]->value, 'works', 'right value';
+is $cookies->[2], undef, 'no third cookie';
+$cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
+is $cookies->[0]->name,  'foo',   'right name';
+is $cookies->[0]->value, 'bar',   'right value';
+is $cookies->[1]->name,  'just',  'right name';
+is $cookies->[1]->value, 'works', 'right value';
+is $cookies->[2], undef, 'no third cookie';
+$cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
+is $cookies->[0]->name,  'foo',   'right name';
+is $cookies->[0]->value, 'bar',   'right value';
+is $cookies->[1]->name,  'just',  'right name';
+is $cookies->[1]->value, 'works', 'right value';
+is $cookies->[2], undef, 'no third cookie';
+$cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
+is $cookies->[0]->name,  'foo',   'right name';
+is $cookies->[0]->value, 'bar',   'right value';
+is $cookies->[1]->name,  'just',  'right name';
+is $cookies->[1]->value, 'works', 'right value';
+is $cookies->[2], undef, 'no third cookie';
 $jar->empty;
-@cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
-is $cookies[0], undef, 'no cookies';
+$cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
+is $cookies->[0], undef, 'no cookies';
 
 # "localhost"
 $jar = Mojo::UserAgent::CookieJar->new;
@@ -79,26 +79,26 @@ $jar->add(
     value  => 'baz'
   )
 );
-@cookies = $jar->find(Mojo::URL->new('http://localhost/foo'));
-is $cookies[0]->name,  'foo', 'right name';
-is $cookies[0]->value, 'bar', 'right value';
-is $cookies[1], undef, 'no second cookie';
-@cookies = $jar->find(Mojo::URL->new('http://foo.localhost/foo'));
-is $cookies[0]->name,  'bar', 'right name';
-is $cookies[0]->value, 'baz', 'right value';
-is $cookies[1]->name,  'foo', 'right name';
-is $cookies[1]->value, 'bar', 'right value';
-is $cookies[2], undef, 'no third cookie';
-@cookies = $jar->find(Mojo::URL->new('http://foo.bar.localhost/foo'));
-is $cookies[0]->name,  'foo', 'right name';
-is $cookies[0]->value, 'bar', 'right value';
-is $cookies[1], undef, 'no second cookie';
-@cookies = $jar->find(Mojo::URL->new('http://bar.foo.localhost/foo'));
-is $cookies[0]->name,  'bar', 'right name';
-is $cookies[0]->value, 'baz', 'right value';
-is $cookies[1]->name,  'foo', 'right name';
-is $cookies[1]->value, 'bar', 'right value';
-is $cookies[2], undef, 'no third cookie';
+$cookies = $jar->find(Mojo::URL->new('http://localhost/foo'));
+is $cookies->[0]->name,  'foo', 'right name';
+is $cookies->[0]->value, 'bar', 'right value';
+is $cookies->[1], undef, 'no second cookie';
+$cookies = $jar->find(Mojo::URL->new('http://foo.localhost/foo'));
+is $cookies->[0]->name,  'bar', 'right name';
+is $cookies->[0]->value, 'baz', 'right value';
+is $cookies->[1]->name,  'foo', 'right name';
+is $cookies->[1]->value, 'bar', 'right value';
+is $cookies->[2], undef, 'no third cookie';
+$cookies = $jar->find(Mojo::URL->new('http://foo.bar.localhost/foo'));
+is $cookies->[0]->name,  'foo', 'right name';
+is $cookies->[0]->value, 'bar', 'right value';
+is $cookies->[1], undef, 'no second cookie';
+$cookies = $jar->find(Mojo::URL->new('http://bar.foo.localhost/foo'));
+is $cookies->[0]->name,  'bar', 'right name';
+is $cookies->[0]->value, 'baz', 'right value';
+is $cookies->[1]->name,  'foo', 'right name';
+is $cookies->[1]->value, 'bar', 'right value';
+is $cookies->[2], undef, 'no third cookie';
 
 # Random top-level domain and IDNA
 $jar = Mojo::UserAgent::CookieJar->new;
@@ -116,24 +116,24 @@ $jar->add(
     value  => 'baz'
   )
 );
-@cookies = $jar->find(Mojo::URL->new('http://bücher.com/foo'));
-is $cookies[0]->name,  'bar', 'right name';
-is $cookies[0]->value, 'baz', 'right value';
-is $cookies[1], undef, 'no second cookie';
-@cookies = $jar->find(Mojo::URL->new('http://bücher.com/foo'));
-is $cookies[0]->name,  'bar', 'right name';
-is $cookies[0]->value, 'baz', 'right value';
-is $cookies[1], undef, 'no second cookie';
-@cookies = $jar->all;
-is $cookies[0]->domain, 'com',               'right domain';
-is $cookies[0]->path,   '/foo',              'right path';
-is $cookies[0]->name,   'foo',               'right name';
-is $cookies[0]->value,  'bar',               'right value';
-is $cookies[1]->domain, 'xn--bcher-kva.com', 'right domain';
-is $cookies[1]->path,   '/foo',              'right path';
-is $cookies[1]->name,   'bar',               'right name';
-is $cookies[1]->value,  'baz',               'right value';
-is $cookies[2], undef, 'no third cookie';
+$cookies = $jar->find(Mojo::URL->new('http://bücher.com/foo'));
+is $cookies->[0]->name,  'bar', 'right name';
+is $cookies->[0]->value, 'baz', 'right value';
+is $cookies->[1], undef, 'no second cookie';
+$cookies = $jar->find(Mojo::URL->new('http://bücher.com/foo'));
+is $cookies->[0]->name,  'bar', 'right name';
+is $cookies->[0]->value, 'baz', 'right value';
+is $cookies->[1], undef, 'no second cookie';
+$cookies = $jar->all;
+is $cookies->[0]->domain, 'com',               'right domain';
+is $cookies->[0]->path,   '/foo',              'right path';
+is $cookies->[0]->name,   'foo',               'right name';
+is $cookies->[0]->value,  'bar',               'right value';
+is $cookies->[1]->domain, 'xn--bcher-kva.com', 'right domain';
+is $cookies->[1]->path,   '/foo',              'right path';
+is $cookies->[1]->name,   'bar',               'right name';
+is $cookies->[1]->value,  'baz',               'right value';
+is $cookies->[2], undef, 'no third cookie';
 
 # Huge cookie
 $jar = Mojo::UserAgent::CookieJar->new->max_cookie_size(1024);
@@ -157,12 +157,12 @@ $jar->add(
     value  => 'x' x 1025
   )
 );
-@cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
-is $cookies[0]->name,  'small', 'right name';
-is $cookies[0]->value, 'x',     'right value';
-is $cookies[1]->name,  'big',   'right name';
-is $cookies[1]->value, 'x' x 1024, 'right value';
-is $cookies[2], undef, 'no second cookie';
+$cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
+is $cookies->[0]->name,  'small', 'right name';
+is $cookies->[0]->value, 'x',     'right value';
+is $cookies->[1]->name,  'big',   'right name';
+is $cookies->[1]->value, 'x' x 1024, 'right value';
+is $cookies->[2], undef, 'no second cookie';
 
 # Expired cookies
 $jar = Mojo::UserAgent::CookieJar->new;
@@ -188,10 +188,10 @@ my $expired = Mojo::Cookie::Response->new(
   value  => '23'
 );
 $jar->add($expired->expires(time - 1));
-@cookies = $jar->find(Mojo::URL->new('http://labs.example.com/foo'));
-is $cookies[0]->name,  'foo', 'right name';
-is $cookies[0]->value, 'bar', 'right value';
-is $cookies[1], undef, 'no second cookie';
+$cookies = $jar->find(Mojo::URL->new('http://labs.example.com/foo'));
+is $cookies->[0]->name,  'foo', 'right name';
+is $cookies->[0]->value, 'bar', 'right value';
+is $cookies->[1], undef, 'no second cookie';
 
 # Replace cookie
 $jar = Mojo::UserAgent::CookieJar->new;
@@ -209,10 +209,10 @@ $jar->add(
     value  => 'bar2'
   )
 );
-@cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
-is $cookies[0]->name,  'foo',  'right name';
-is $cookies[0]->value, 'bar2', 'right value';
-is $cookies[1], undef, 'no second cookie';
+$cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
+is $cookies->[0]->name,  'foo',  'right name';
+is $cookies->[0]->value, 'bar2', 'right value';
+is $cookies->[1], undef, 'no second cookie';
 
 # Switch between secure and normal cookies
 $jar = Mojo::UserAgent::CookieJar->new;
@@ -225,11 +225,11 @@ $jar->add(
     secure => 1
   )
 );
-@cookies = $jar->find(Mojo::URL->new('https://example.com/foo'));
-is $cookies[0]->name,  'foo', 'right name';
-is $cookies[0]->value, 'foo', 'right value';
-@cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
-is @cookies, 0, 'no insecure cookie';
+$cookies = $jar->find(Mojo::URL->new('https://example.com/foo'));
+is $cookies->[0]->name,  'foo', 'right name';
+is $cookies->[0]->value, 'foo', 'right value';
+$cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
+is scalar @$cookies, 0, 'no insecure cookie';
 $jar->add(
   Mojo::Cookie::Response->new(
     domain => 'example.com',
@@ -238,13 +238,13 @@ $jar->add(
     value  => 'bar'
   )
 );
-@cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
-is $cookies[0]->name,  'foo', 'right name';
-is $cookies[0]->value, 'bar', 'right value';
-@cookies = $jar->find(Mojo::URL->new('https://example.com/foo'));
-is $cookies[0]->name,  'foo', 'right name';
-is $cookies[0]->value, 'bar', 'right value';
-is $cookies[1], undef, 'no second cookie';
+$cookies = $jar->find(Mojo::URL->new('http://example.com/foo'));
+is $cookies->[0]->name,  'foo', 'right name';
+is $cookies->[0]->value, 'bar', 'right value';
+$cookies = $jar->find(Mojo::URL->new('https://example.com/foo'));
+is $cookies->[0]->name,  'foo', 'right name';
+is $cookies->[0]->value, 'bar', 'right value';
+is $cookies->[1], undef, 'no second cookie';
 
 # Ignore leading dot
 $jar = Mojo::UserAgent::CookieJar->new;
@@ -262,26 +262,26 @@ $jar->add(
     value  => 'baz'
   )
 );
-@cookies = $jar->find(Mojo::URL->new('http://www.labs.example.com/foo'));
-is $cookies[0]->name,  'foo', 'right name';
-is $cookies[0]->value, 'bar', 'right value';
-is $cookies[1]->name,  'bar', 'right name';
-is $cookies[1]->value, 'baz', 'right value';
-is $cookies[2], undef, 'no third cookie';
-@cookies = $jar->find(Mojo::URL->new('http://labs.example.com/foo'));
-is $cookies[0]->name,  'foo', 'right name';
-is $cookies[0]->value, 'bar', 'right value';
-is $cookies[1]->name,  'bar', 'right name';
-is $cookies[1]->value, 'baz', 'right value';
-is $cookies[2], undef, 'no third cookie';
-@cookies = $jar->find(Mojo::URL->new('http://example.com/foo/bar'));
-is $cookies[0]->name,  'foo', 'right name';
-is $cookies[0]->value, 'bar', 'right value';
-is $cookies[1]->name,  'bar', 'right name';
-is $cookies[1]->value, 'baz', 'right value';
-is $cookies[2], undef, 'no third cookie';
-@cookies = $jar->find(Mojo::URL->new('http://example.com/foobar'));
-is $cookies[0], undef, 'no cookies';
+$cookies = $jar->find(Mojo::URL->new('http://www.labs.example.com/foo'));
+is $cookies->[0]->name,  'foo', 'right name';
+is $cookies->[0]->value, 'bar', 'right value';
+is $cookies->[1]->name,  'bar', 'right name';
+is $cookies->[1]->value, 'baz', 'right value';
+is $cookies->[2], undef, 'no third cookie';
+$cookies = $jar->find(Mojo::URL->new('http://labs.example.com/foo'));
+is $cookies->[0]->name,  'foo', 'right name';
+is $cookies->[0]->value, 'bar', 'right value';
+is $cookies->[1]->name,  'bar', 'right name';
+is $cookies->[1]->value, 'baz', 'right value';
+is $cookies->[2], undef, 'no third cookie';
+$cookies = $jar->find(Mojo::URL->new('http://example.com/foo/bar'));
+is $cookies->[0]->name,  'foo', 'right name';
+is $cookies->[0]->value, 'bar', 'right value';
+is $cookies->[1]->name,  'bar', 'right name';
+is $cookies->[1]->value, 'baz', 'right value';
+is $cookies->[2], undef, 'no third cookie';
+$cookies = $jar->find(Mojo::URL->new('http://example.com/foobar'));
+is $cookies->[0], undef, 'no cookies';
 
 # "(" in path
 $jar = Mojo::UserAgent::CookieJar->new;
@@ -293,14 +293,14 @@ $jar->add(
     value  => 'bar'
   )
 );
-@cookies = $jar->find(Mojo::URL->new('http://example.com/foo(bar'));
-is $cookies[0]->name,  'foo', 'right name';
-is $cookies[0]->value, 'bar', 'right value';
-is $cookies[1], undef, 'no second cookie';
-@cookies = $jar->find(Mojo::URL->new('http://example.com/foo(bar/baz'));
-is $cookies[0]->name,  'foo', 'right name';
-is $cookies[0]->value, 'bar', 'right value';
-is $cookies[1], undef, 'no second cookie';
+$cookies = $jar->find(Mojo::URL->new('http://example.com/foo(bar'));
+is $cookies->[0]->name,  'foo', 'right name';
+is $cookies->[0]->value, 'bar', 'right value';
+is $cookies->[1], undef, 'no second cookie';
+$cookies = $jar->find(Mojo::URL->new('http://example.com/foo(bar/baz'));
+is $cookies->[0]->name,  'foo', 'right name';
+is $cookies->[0]->value, 'bar', 'right value';
+is $cookies->[1], undef, 'no second cookie';
 
 # Extract and inject cookies without domain and path
 $jar = Mojo::UserAgent::CookieJar->new;
@@ -344,19 +344,19 @@ $jar->extract($tx);
 $tx = Mojo::Transaction::HTTP->new;
 $tx->req->url->parse('http://example.com/test');
 $jar->inject($tx);
-@cookies = @{$tx->req->every_cookie('foo')};
-is $cookies[0]->name,  'foo',     'right name';
-is $cookies[0]->value, 'without', 'right value';
-is $cookies[1]->name,  'foo',     'right name';
-is $cookies[1]->value, 'with',    'right value';
-is $cookies[2], undef, 'no third cookie';
+$cookies = $tx->req->every_cookie('foo');
+is $cookies->[0]->name,  'foo',     'right name';
+is $cookies->[0]->value, 'without', 'right value';
+is $cookies->[1]->name,  'foo',     'right name';
+is $cookies->[1]->value, 'with',    'right value';
+is $cookies->[2], undef, 'no third cookie';
 $tx = Mojo::Transaction::HTTP->new;
 $tx->req->url->parse('http://www.example.com/test');
 $jar->inject($tx);
-@cookies = @{$tx->req->every_cookie('foo')};
-is $cookies[0]->name,  'foo',  'right name';
-is $cookies[0]->value, 'with', 'right value';
-is $cookies[1], undef, 'no second cookie';
+$cookies = $tx->req->every_cookie('foo');
+is $cookies->[0]->name,  'foo',  'right name';
+is $cookies->[0]->value, 'with', 'right value';
+is $cookies->[1], undef, 'no second cookie';
 
 # Extract and inject cookies for "localhost" (valid and invalid)
 $jar = Mojo::UserAgent::CookieJar->new;
@@ -469,7 +469,7 @@ $tx->res->cookies(
   )
 );
 $jar->extract($tx);
-is_deeply [$jar->all], [], 'no cookies';
+is_deeply $jar->all, [], 'no cookies';
 
 # Extract cookies with invalid domain (IP address)
 $jar = Mojo::UserAgent::CookieJar->new;
@@ -498,7 +498,7 @@ $tx->res->cookies(
   )
 );
 $jar->extract($tx);
-is_deeply [$jar->all], [], 'no cookies';
+is_deeply $jar->all, [], 'no cookies';
 
 # Extract cookies with invalid path
 $jar = Mojo::UserAgent::CookieJar->new;
@@ -522,6 +522,6 @@ $tx->res->cookies(
   )
 );
 $jar->extract($tx);
-is_deeply [$jar->all], [], 'no cookies';
+is_deeply $jar->all, [], 'no cookies';
 
 done_testing();
